--- a/game/engine.cfg
+++ b/game/engine.cfg
@@ -1,9 +1,9 @@
 [application]
 
-name="0003 - Player Controller with KinematicBody2D"
-main_scene="res://main.tscn"
+name="2Movimiento"
+main_scene="res://escenas/main.tscn"
 icon="res://icon.png"
 
-[image_loader]
+[autoload]
 
-filter=false
+global="*res://global/global.gd"
