--- a/game/engine.cfg
+++ b/game/engine.cfg
@@ -1,7 +1,7 @@
 [application]
 
 name="2Movimiento"
-main_scene="res://escenas/main.tscn"
+main_scene="res://escenas/Intro.tscn"
 icon="res://icon.png"
 
 [autoload]
